--- a/Frontend/css/results.css
+++ b/Frontend/css/results.css
@@ -54,6 +54,7 @@ body{
   flex-flow: row;
   width: 100%;
   height: 92px;
+  min-height: 92px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 2px solid #000000;
   border-radius: 11px;
@@ -129,25 +130,34 @@ body{
   font: normal normal 600 18px/27px Poppins;
   letter-spacing: 0px;
 }
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000000;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #000000;
+}
 .results-container
 {
   display: flex;
   flex-flow: column;
   margin-top: 54px;
-  margin-bottom: 50px;
+  margin-bottom: 0;
   height: 50vh;
   overflow-x: hidden;
   overflow-y: auto;
-}
-.results-container ::-webkit-scrollbar {
-  background-color: #ffffff;
-  width: 10px;/* or add it to the track */
-}
-
-/* Add a thumb */
-.results-container ::-webkit-scrollbar-thumb {
-    background: #000000;
-    border-radius: 10px;
 }
 .result-container
 {
@@ -165,6 +175,7 @@ body{
   color: #000000;
   opacity: 1;
   margin-right: 45px;
+  min-width: 66px;
 }
 .result
 {
